Упростил БД, идет процесс переписания кода

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DB_HOST=localhost
-DB_PORT=5432
+BOT_TOKEN_W=5994126832:AAHM0Xip_45MVSSV4xBJ0Wz139akBwm2LLU
+BOT_TOKEN_L=6607474726:AAFWJHb53wmlEI_s_MYc7gUJGcZ7FyLY-Xw
