DEV-20: Рефакторинг. Переход на ORM. Init

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
+BOT_TOKEN=
+
 DB_USER=root
-DB_PASSWORD=password
-DB_NAME=
-DB_HOST=localhost=127.0.0.1
+DB_PASS=password
+DB_NAME=analyses
+DB_HOST=localhost
 DB_PORT=5432
+
+DB_FILE_PATH=
